# hw19-maven/src/main/java/ru/otus/model/dto/output/UserResponseDto.java
@@ -1,19 +1,0 @@
-package ru.otus.model.dto.output;
-
-import lombok.*;
-
-import java.util.List;
-
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
-@Builder
-public class UserResponseDto {
-
-    private String id;
-    private String name;
-    private String login;
-    private List<String> accesses;
-    private List<String> scopes;
-}
