# hw19-maven/src/main/java/ru/otus/model/enums/Expressions.java
@@ -1,0 +1,14 @@
+package ru.otus.model.enums;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@Getter
+@AllArgsConstructor
+public enum Expressions {
+
+    CREATE_ORDER("Order::create", "Создать заказ");
+
+    private final String expressionName;
+    private final String expressionDescription;
+}
